--- a/Index.html
+++ b/Index.html
@@ -10,13 +10,42 @@
 
 <!-- Header content -->
 <body>
+    <!-- navigation -->
+    <header>
+      <h1>
+        <a href="/">
+          Biography
+        </a>
+      </h1>
+      <nav>
+        <!-- Unordered list element -->
+        <ul>
+          <!-- List item element-->
+          <li>
+            <!-- Anchor element -->
+            <a href="#profileHeder">Background</a>
+          </li>
+          <li>
+            <a href="#section1">Contact Information</a>
+          </li>
+          <li>
+            <a href="#section2">Previous Experience</a>
+          </li>
+          <li>
+            <a href="externalResourcesNav">Projects</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
 <header>
 </div>
 <div class="profilePhoto"> 
   <!-- Profile photo --> 
   <img src="Images\IMG_9495.jpg" alt="sample"> </div>
+
 <!-- Identity details -->
 <section class="profileHeader">
+  <section id="profileHeader" class="intro">
   <h1>Claudia Chittim</h1>
   <h3>Digital Analyst and Web Developer</h3>
   <hr>
@@ -28,8 +57,10 @@
 </header>
 <!-- content -->
 <section class="mainContent"> 
+  
   <!-- Contact details -->
   <section class="section1">
+    <section id="section1" class="section1">
     <h2 class="sectionTitle">Contact Information</h2>
     <hr class="sectionTitleRule">
     <hr class="sectionTitleRule2">
@@ -40,26 +71,32 @@
       <p><span>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Address :</span> Fair Oaks Ranch, Texas</p>
     </div>
   </section>
+
   <!-- Previous experience details -->
   <section class="section2">
     <h2 class="sectionTitle">Previous Experience</h2>
     <hr class="sectionTitleRule">
     <hr class="sectionTitleRule2">
+    <section id="section2"
+
     <!-- First Title & company details  -->
     <article class="section2Content">
       <h2 class="sectionContentTitle">Texas Instruments</h2>
       <h3 class="sectionContentSubTitle">Digital Metrics Analyst / 2011 - 2012</h3>
       <p class="sectionContent"> Collected website metrics on www.ti.com. Pulled data using Omniture Site Catalyst and Hitwise. </p>
     </article>
+
     <!-- Second Title & company details  -->
     <article class="section2Content">
       <h2 class="sectionContentTitle"> J. Paul Getty Trust</h2>
       <h3 class="sectionContentSubTitle">Position / April 2005 - October 2007</h3>
       <p class="sectionContent"> Developed Getty Games using Net Genesis and by conducting usability evaluations on over 200 participants. </p>
     </article>
-    <!-- Replicate the above Div block to add more title and company details --> 
+    <!-- Replicate the above Div block to add more title and company details in the future--> 
   </section>
+
   <!-- Links to expore your past projects and download your CV -->
+  <section class="externalResourcesNav>
   <aside class="externalResourcesNav">
     <div class="externalResources"> <a href="https://www.linkedin.com/in/cchittim/" title="LinkedIn Profile">LinkedIn Profile</a> </div>
     <span class="stretch"></span>
