changed color of header navigation

--- a/Index.html
+++ b/Index.html
@@ -14,7 +14,6 @@
     <header>
       <h1>
         <a href="/">
-          Biography
         </a>
       </h1>
       <nav>
@@ -30,9 +29,6 @@
           </li>
           <li>
             <a href="#section2">Previous Experience</a>
-          </li>
-          <li>
-            <a href="externalResourcesNav">Projects</a>
           </li>
         </ul>
       </nav>
@@ -97,6 +93,7 @@
 
   <!-- Links to expore your past projects and download your CV -->
   <section class="externalResourcesNav>
+  <section id="externalResourcesNav" class="externalResourcesNav">
   <aside class="externalResourcesNav">
     <div class="externalResources"> <a href="https://www.linkedin.com/in/cchittim/" title="LinkedIn Profile">LinkedIn Profile</a> </div>
     <span class="stretch"></span>
