added MVC website project

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 <a href="https://c0y01202.github.io/workdayscheduler/"><img src="Images/index.png" width="200" height="200" alt=""></a>	
 <a href="https://c0y01202.github.io/onlinequiz/"><img src="Images/questions_page.png" width="251" height="200" alt=""></a>
 
-<section>Collaborative Websites: includes 2 APIs</section>
+<section>Collaborative Websites: APIs and MVC Applications</section>
 <a href="https://c0y01202.github.io/currency_exchange_site/"><img src="Images/currency_exchange_website.png" width="850" height="500" alt=""/>
 <a href="https://still-citadel-61156.herokuapp.com/"><img src="Images/main_dashboard.png" width="850" height="500" alt=""/>
 																													 
